[package]
name = "retroglyph-software"
version = "0.1.1"
description = "Software (winit + softbuffer) pixel rendering backend for retroglyph"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.1.1", default-features = false, features = ["std"] }
# Seam only (Presenter/WindowBackend/WindowHandle): no winit. The loop is the
# caller's business -- games depend on retroglyph-window with its default
# `winit` feature; this crate just implements the renderer side.
retroglyph-window = { path = "../window", version = "0.1.1", default-features = false }
ixy = "0.6.0-alpha.9"
grixy = { version = "0.6.0-alpha.8", features = ["alloc", "buffer"] }
log = "0.4"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
alpha-blend = { version = "0.2", optional = true, default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
softbuffer = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# On wasm32, present() bypasses softbuffer's web backend (which reallocates
# a fresh RGBA Vec every frame) in favor of a persistent RGBA buffer reused
# across frames; see present()'s wasm32 branch. Version pinned to match the
# wasm-bindgen dependency elsewhere in the workspace (crates/window,
# crates/terminal-wasm, examples) -- the CLI and the crate version
# must agree.
wasm-bindgen = "=0.2.106"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
] }

[features]
# The `software-` prefix from the pre-split monolith is redundant now that
# these live inside `retroglyph-software`: `retroglyph-software/tilesets`
# reads better than `.../software-tilesets`.
tilesets = ["dep:image", "dep:alpha-blend"]
default-font = []

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
