[package]
name = "retroglyph-terminal-wasm"
version = "0.1.0"
description = "WASM/browser terminal backend for retroglyph, driven by pushed events and pulled ANSI output"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.1.0", default-features = false, features = ["std"] }
retroglyph-terminal = { path = "../terminal", version = "0.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Fuzzes decode_key_event/decode_key_modifiers over arbitrary (code, mods) pairs -- see the
# decode_key_event_proptests module in lib.rs (also cfg-gated to non-wasm32: proptest's `rand`
# dependency pulls in getrandom, which does not build for wasm32-unknown-unknown without extra
# feature wiring `just test-wasm`'s wasm-pack build doesn't do). Same version as
# retroglyph-core's own proptest dev-dependency; core never runs its own tests under wasm32
# (only this crate has a `just test-wasm` target), which is why this doesn't affect it.
proptest = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Version pinned to match the wasm-bindgen dev-dependency in
# examples/Cargo.toml -- the CLI and the crate version must agree.
wasm-bindgen = "=0.2.106"
# Only used to warn on invalid `wasm_terminal_*` handles (see the `wasm` module below); this
# crate's non-wasm32 API surface has no fallible operations and stays log-free.
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# Exercises the `wasm` module's FFI surface (tests/wasm_ffi.rs) under an actual wasm32 build --
# host-target `cargo test` never compiles that module at all (it's `cfg(target_arch = "wasm32")`),
# so this is the only coverage of the exported `wasm_terminal_*` functions themselves, as opposed
# to the `TerminalWasm`/`decode_key_event` logic underneath them (already covered by the host-side
# tests above). Versioned independently of the `wasm-bindgen` dependency above (its own 0.3.x
# line, not 0.2.x) -- 0.3.56 is the release published from the same wasm-bindgen-repo tag as
# wasm-bindgen 0.2.106 (its own Cargo.toml exact-pins `wasm-bindgen = "=0.2.106"`), so it's the
# only wasm-bindgen-test version that resolves against this crate's `wasm-bindgen` pin at all: any
# newer wasm-bindgen-test release exact-pins a newer wasm-bindgen too. If the `wasm-bindgen`/
# `wasm-bindgen-cli` pins above are ever bumped, this must move in lockstep -- check
# `crates/test/Cargo.toml` at the target wasm-bindgen tag for the matching version. Run via
# `just test-wasm`, which wraps `wasm-pack test --node` (Node.js, not a real browser: this crate's
# FFI has no DOM/xterm.js dependency to exercise, only the handle registry and event decoding --
# see that test file's own doc comment for what is and isn't reachable through this FFI).
wasm-bindgen-test = "=0.3.56"

[features]
# Forwards to retroglyph-terminal's egc feature.
egc = ["retroglyph-terminal/egc", "retroglyph-core/egc"]
