[package]
name = "retroglyph-terminal"
version = "0.1.3"
description = "Shared ANSI/SGR cell-diff renderer for retroglyph's terminal-family backends"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.3.0", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5"
fastrand = "2"

[features]
# Forwards to retroglyph-core's egc feature; this crate has EGC-aware and
# non-EGC-aware code paths gated on the same flag name.
egc = ["retroglyph-core/egc"]

[[bench]]
name = "frame_render"
harness = false

[[bench]]
name = "wide_char"
harness = false
required-features = ["egc"]
