[package]
name = "retroglyph-widgets"
version = "0.2.0"
description = "Immediate-mode drawing helpers for retroglyph (panels, gauges, tables, sparklines)"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
# Forwards to retroglyph-core's egc feature. Paragraph (word-wrap) needs
# grapheme-cluster-aware TextLayout, which only exists when egc is on.
egc = ["retroglyph-core/egc"]

[dependencies]
# `gem`: retroglyph-core/Color::lerp (used by meter_ramp's color ramp) is
# gated behind it. Not a separate widgets-level feature -- color ramping is
# non-optional composite-tier functionality, not an opt-in extra like `egc`.
retroglyph-core = { path = "../core", version = "0.2.0", default-features = false, features = ["std", "gem"] }
unicode-width = "0.2"
