[package]
name = "retroglyph-window"
version = "0.1.0-alpha"
description = "Shared winit windowing layer for retroglyph's windowed backends"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.1.0-alpha", default-features = false, features = ["std"] }
raw-window-handle = "0.6"
winit = { version = "0.30", optional = true }
log = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Version pinned to match the wasm-bindgen dev-dependency in
# examples/Cargo.toml -- the CLI and the crate version must agree.
# Only exercised behind the `winit` feature (see winit/run.rs), but kept as
# a plain target dependency rather than threading an extra optional-feature
# combination through for a target-gated, always-small pair of crates.
wasm-bindgen = "=0.2.106"
web-sys = { version = "0.3", features = ["Window", "EventTarget", "Performance"] }

[features]
default = ["winit"]
# The winit event loop and event translation (`run`, `translate`). Renderer
# crates that only implement `Presenter` can disable this and depend solely
# on raw-window-handle; loops other than winit (SDL2, tao, custom) bring
# their own driver against `Presenter` + `WindowBackend`.
winit = ["dep:winit", "dep:log"]
