[package]
name = "retroglyph-window"
version = "0.3.1"
description = "Shared winit windowing layer for retroglyph's windowed backends"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
retroglyph-core = { path = "../core", version = "0.3.1", default-features = false, features = ["std"] }
raw-window-handle = "0.6"
winit = { version = "0.30", optional = true }
log = { version = "0.4", optional = true }
# A portable `std::time::Instant`-alike: plain `std::time` re-export on native, backed by the
# browser's `Performance.now()` on `wasm32-unknown-unknown`. Already in `Cargo.lock` transitively
# (winit depends on it), so this adds no new dependency -- it replaces `run.rs`'s own hand-rolled
# native/wasm `Instant` split (a `#[cfg(target_arch = "wasm32")] fn wasm_now_ms()`) with one
# non-target-gated call site.
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native OS clipboard read/write (`clipboard::SystemClipboard`), named explicitly by issue #296.
# wasm32 has no equivalent here: the browser clipboard API is async-only (`navigator.clipboard`
# returns a `Promise`), which doesn't fit this crate's synchronous `Clipboard` trait, and arboard
# itself does not build for `wasm32-unknown-unknown` -- so this is a native-only dependency, kept
# out of the `wasm32` target section below entirely rather than feature-gated, matching this
# crate's existing native/wasm module-swap convention (see `crates/software/src/lib.rs`'s
# `#[cfg(not(target_arch = "wasm32"))]`/`#[cfg(target_arch = "wasm32")]` `mod surface` split).
arboard = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Version pinned to match the wasm-bindgen dev-dependency in
# examples/Cargo.toml -- the CLI and the crate version must agree.
# Only exercised behind the `winit` feature (see winit/run.rs), but kept as
# a plain target dependency rather than threading an extra optional-feature
# combination through for a target-gated, always-small pair of crates.
wasm-bindgen = "=0.2.106"
# "Performance" dropped: `web-time` (above) now owns wall-clock timing, so this crate's own
# wasm32 code only needs `web-sys` for `Window`/`EventTarget` (DPR, resize listeners), plus
# `Document`/`Element`/`HtmlCanvasElement` for `web::winit_canvas`'s DOM canvas lookup, shared by
# the graphical backends (retroglyph-gl, retroglyph-software).
web-sys = { version = "0.3", features = ["Window", "EventTarget", "Document", "Element", "HtmlCanvasElement"] }

[dev-dependencies]
# Used by the pixel_to_cell/key_translate/cursor_moved criterion benches (benches/*.rs) for
# deterministic, seeded pseudo-random input streams. Same version as retroglyph-core's and
# retroglyph-software's own fastrand dev-dependency.
criterion = "0.5"
fastrand = "2"

[[bench]]
name = "pixel_to_cell"
harness = false
required-features = ["winit"]

[[bench]]
name = "key_translate"
harness = false
required-features = ["winit"]

[[bench]]
name = "cursor_moved"
harness = false
required-features = ["winit"]

[features]
default = ["winit"]
# The winit event loop and event translation (`run`, `translate`). Renderer
# crates that only implement `Presenter` can disable this and depend solely
# on raw-window-handle; loops other than winit (SDL2, tao, custom) bring
# their own driver against `Presenter` + `WindowBackend`.
winit = ["dep:winit", "dep:log"]
# Embeds the Unscii 16 default font (`font::unscii16`). Off by default so a consumer that supplies
# its own bitmap font pays nothing for the ~4 KB atlas; the graphical backends' own `default-font`
# features forward to this one.
default-font = []
